--- a/style.css
+++ b/style.css
@@ -10,12 +10,13 @@
 nav a {
   color: #625750;
 }
-img{
-  width: 15vw;
-  height: 100%;
-}
-h1{
-  font-size: 8vw;
+﻿body{
+background:url(Ah1ZVHO6690.jpg) no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+background-attachment: fixed;
 }
 table{
   background-color: #c2d4dd;
